--- a/sections/cards.liquid
+++ b/sections/cards.liquid
@@ -21,19 +21,13 @@
       "default": "25% Off"
     },
     {
-      "type": "image_picker",
-      "label": "Card Image",
-      "id": "card_image",
-      "default": "placeholder-image.jpg"
-    },
-    {
       "type": "textarea",
       "label": "Card Details",
       "id": "card_details",
       "default": "Use code: SAVE25"
     },
     {
-      "type": "url",
+      "type": "text",
       "label": "Card Link",
       "id": "card_link",
       "default": "/collections/all?discount=SAVE25"
