--- a/sections/dev__multi-purpose.liquid
+++ b/sections/dev__multi-purpose.liquid
@@ -34,6 +34,14 @@
     {%- if section.settings.padding_left_value > 0 -%}
         padding-left: {{ section.settings.padding_left_value }}{{ section.settings.padding_left_unit }};
     {%- endif -%}
+    {%- if section.settings.display_mode == "flex" -%}
+      flex-direction: {{ section.settings.flex_direction }}
+      align-items: {{ section.settings.align_items }};
+      justify-content: {{ section.settings.justify_content }};
+      row-gap: {{ section.settings.row_gap_value }}{{ section.settings.row_gap_unit }};
+      column-gap: {{ section.settings.column_gap_value }}{{ section.settings.column_gap_unit }};
+      flex-wrap: {{ section.settings.flex_wrap }};
+    {%- endif -%}
   "
 >
   {{ section.settings.display_mode }}
@@ -262,6 +270,98 @@
         { "value": "svh", "label": "SVH (Small Viewport Height)" }
       ],
       "default": "px"
+    },
+
+    {
+      "type": "header",
+      "content": "Flexbox"
+    },
+    {
+      "type": "select",
+      "id": "flex_direction",
+      "label": "Flex Direction",
+      "options": [
+        { "value": "row", "label": "Row" },
+        { "value": "row-reverse", "label": "Row Reverse" },
+        { "value": "column", "label": "Column" },
+        { "value": "column-reverse", "label": "Column Reverse" }
+      ],
+      "default": "row"
+    },
+    {
+      "type": "select",
+      "id": "align_items",
+      "label": "Align Items",
+      "options": [
+        { "value": "normal", "label": "Normal" },
+        { "value": "stretch", "label": "Stretch" },
+        { "value": "center", "label": "Center" },
+        { "value": "flex-start", "label": "Flex Start" },
+        { "value": "flex-end", "label": "Flex End" },
+        { "value": "baseline", "label": "Baseline" }
+      ],
+      "default": "normal"
+    },
+    {
+      "type": "select",
+      "id": "justify_content",
+      "label": "Justify Content",
+      "options": [
+        { "value": "space-between", "label": "Space Between" },
+        { "value": "space-around", "label": "Space Around" },
+        { "value": "center", "label": "Center" },
+        { "value": "flex-start", "label": "Flex Start" },
+        { "value": "flex-end", "label": "Flex End" },
+        { "value": "space-evenly", "label": "Space Evenly" }
+      ],
+      "default": "flex-start"
+    },
+    {
+      "type": "number",
+      "id": "row_gap_value",
+      "label": "Row Gap Value",
+      "default": 0
+    },
+    {
+      "type": "select",
+      "id": "row_gap_unit",
+      "label": "Gap Unit For Row",
+      "options": [
+        { "value": "px", "label": "px (pixels)" },
+        { "value": "em", "label": "em" },
+        { "value": "rem", "label": "rem (root em)" },
+        { "value": "%", "label": "% (percentage)" }
+      ],
+      "default": "px"
+    },
+    {
+      "type": "number",
+      "id": "column_gap_value",
+      "label": "Column Gap Value",
+      "default": 0
+    },
+    {
+      "type": "select",
+      "id": "column_gap_unit",
+      "label": "Gap Unit For Column",
+      "options": [
+        { "value": "px", "label": "px (pixels)" },
+        { "value": "em", "label": "em" },
+        { "value": "rem", "label": "rem (root em)" },
+        { "value": "%", "label": "% (percentage)" }
+      ],
+      "default": "px"
+    },
+    {
+      "type": "select",
+      "id": "flex_wrap",
+      "label": "Flex Wrap",
+      "options": [
+        { "value": "nowrap", "label": "Don't Wrap" },
+        { "value": "wrap", "label": "Wrap" },
+        { "value": "wrap-reverse", "label": "Wrap Reverse" }
+      ],
+      "default": "nowrap"
     }
   ],
   "presets": [
