Add missing semicolon

--- a/sections/dev__multi-purpose.liquid
+++ b/sections/dev__multi-purpose.liquid
@@ -35,7 +35,7 @@
         padding-left: {{ section.settings.padding_left_value }}{{ section.settings.padding_left_unit }};
     {%- endif -%}
     {%- if section.settings.display_mode == "flex" -%}
-      flex-direction: {{ section.settings.flex_direction }}
+      flex-direction: {{ section.settings.flex_direction }};
       align-items: {{ section.settings.align_items }};
       justify-content: {{ section.settings.justify_content }};
       row-gap: {{ section.settings.row_gap_value }}{{ section.settings.row_gap_unit }};
