--- a/assets/image-text.css
+++ b/assets/image-text.css
@@ -3,7 +3,7 @@
      font-style: normal;
      font-weight: 400;
      font-display: swap;
-     src: url('/assets/HanziPenSC-W5') format("woff");
+     src: url('/assets/HanziPenSC-W5.woff') format("woff");
  }
  
 @font-face {
@@ -11,7 +11,7 @@
      font-style: normal;
      font-weight: 400;
      font-display: swap;
-     src: url('/assets/LondrinaSolid-Regular') format("woff");
+     src: url('/assets/LondrinaSolid-Regular.woff') format("woff");
  }
  
 @font-face {
@@ -19,7 +19,7 @@
      font-style: normal;
      font-weight: 400;
      font-display: swap;
-     src: url('/assets/CircularStd-Book') format("woff2")
+     src: url('/assets/CircularStd-Book.woff2') format("woff2")
  }
 
  :root {
@@ -58,7 +58,7 @@
      height: 100vh;
 }
   
-.image_banner_small_title p{
+.image-banner-small-title {
      font-weight: 400;
      line-height: normal;
      letter-spacing: 0px;
@@ -66,7 +66,7 @@
      font-size: 20px !important;
 }
 
-.image_banner_title h2{
+.image-banner-title{
      font-weight: 400;
      line-height: 90%;
      font-family: var(--font-heading-family);
@@ -74,22 +74,19 @@
      text-transform: uppercase;
 }
 
-.image_banner_image {
+.image-banner-image {
      flex: 1;
      display: flex;
      align-items: center;
      justify-content: center;
 }
 
-.image_banner_image img {
-     max-width: 100%; 
+.image-banner-image img {
      height: 100%;
-     display: block;
-     object-fit: cover;
      width: 100%;
 }
 
-.image_banner_contant p{
+.image-banner-contant {
      font-size: 18px !important;
      font-family: var(--font-body-family);
      margin: 0;
@@ -97,7 +94,7 @@
  
   
 @media only screen and (max-width: 768px) {
-     .image-banner-content {
+     .image-banner {
           flex-direction: column;
           align-items: center;
      }
@@ -106,15 +103,15 @@
           padding: 20px;
      }
 
-     .image-banner-small-title p{
-          font-size: 22px !important;
+     .image-banner-small-title{
+          font-size: 20px !important;
      }
 
-     .image-banner-title h2{
+     .image-banner-title {
           font-size: 36px !important;
      }
 
-     .image-banner-content p {
+     .image-banner-content {
           font-size: 15px !important;
      }
 }
