--- a/assets/image-text.css
+++ b/assets/image-text.css
@@ -28,7 +28,7 @@
      --font-body-family: "Circular std";
  }
  
- * {
+* {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
@@ -59,7 +59,6 @@
 }
   
 .image-banner-small-title {
-     font-weight: 400;
      line-height: normal;
      letter-spacing: 0px;
      font-family: var(--font-subtitle-family);
@@ -67,11 +66,11 @@
 }
 
 .image-banner-title{
-     font-weight: 400;
      line-height: 90%;
      font-family: var(--font-heading-family);
      font-size: 60px !important;
      text-transform: uppercase;
+     font-weight: bolder;
 }
 
 .image-banner-image {
@@ -89,7 +88,6 @@
 .image-banner-contant {
      font-size: 18px !important;
      font-family: var(--font-body-family);
-     margin: 0;
 }
  
   
