--- a/sections/dev__position.liquid
+++ b/sections/dev__position.liquid
@@ -1,4 +1,4 @@
-<!-- dev_position.liquid -->
+<!-- dev__position.liquid -->
 <div
   class="{{ section.settings.display_mode }} custom-spacing"
   style="
