--- a/sections/cards.liquid
+++ b/sections/cards.liquid
@@ -1,4 +1,3 @@
-{{ 'cards.css' | asset_url | stylesheet_tag }}
 <div class="section-container">
     <div class="section-title">Offers</div>
 </div>
@@ -8,7 +7,11 @@
   <div class="card-section">
     <a href="{{ block.settings.card_link }}" class="card-link">
       <div class="card">
-        <img src="{{ block.settings.card_image | img_url: '300x300' }}" alt="{{ block.settings.card_title }}">
+        {% if block.settings.card_image != blank %}
+          {{
+            block.settings.card_image | image_url: width: 300, height: 300
+           }}
+          {% endif %}
         <h3>{{ block.settings.card_title }}</h3>
         <p>{{ block.settings.card_details }}</p>
         <a href="{{ block.settings.card_link }}" class="btn">{{ block.settings.card_button_text }}</a>
