--- a/sections/dev_navbar.liquid
+++ b/sections/dev_navbar.liquid
@@ -1,4 +1,4 @@
-<!-- dev_test_navbar.liquid -->
+<!-- dev_navbar.liquid -->
 
 <header>
     <nav>
@@ -6,10 +6,29 @@
             {% for block in section.blocks %}
                 <li><a href="{{ block.settings.url }}">{{ block.settings.text }}</a></li>
             {% endfor %}
-            
-          {% for link in section.settings.menu.links %}
-            {{ link.title | link_to: link.url }}
-          {%- endfor %}
+        </ul>
+        <ul>  
+            {% for link in section.settings.menu.links %}
+              <li> {{ link.title | link_to: link.url }} </li>
+              	{% if link.links.size > 0 %}
+                  <ul class="menu dropdown-child">
+                    {% for child_link in link.links %}
+                      <li class="menu-link">
+                        <a href="{{ child_link.url }}">{{ child_link.title }}</a>
+                        {% if child_link.links.size > 0 %}
+                          <ul class="menu dropdown-grandchild">
+                            {% for grandchild_link in child_link.links %}
+                              <li class="menu-link">
+                                <a href="{{ grandchild_link.url }}">{{ grandchild_link.title }}</a>
+                              </li>
+                            {% endfor %}
+                          </ul>
+                        {% endif %}
+                      </li>
+                    {% endfor %}
+                  </ul>
+              {% endif %}
+            {%- endfor %}
         </ul>
         
     </nav>
